# python-libs

./: .gitignore  .gitmodules  LICENSE  README.md  python27_on_centos65.md
attendance/: README.md  gen_excel.py  init.sh  mail_ini.sample  parse_excel.py  py2exe.cmd  send_mail.py  setup.py  template.html
click-sample/: README.md  main.py  moin.py  requirements-dev.txt  requirements.txt  util_cli.py
commit-modifiers/: Dockerfile  README.md  comodifiers.sh  loguru_helper.py  main.py  modifier.sh  requirements.txt
concurrency/: README.md  container.py  excutor.py  multiproc_example.py  pipe_test.py  process_test.py
design-pattern/: README.md  abstract_factory.py  bridge.py  factory_method.py  simple_factory.py  star-sample.py
dynaconf-sample/: .env.example  README.md  config.py  config.yaml  requirements-dev.txt  requirements.txt
fabric2-sample/: README.md  fabfile.py  requirements-dev.txt  requirements.txt  ssh_config
git-filter-branch/: README.md  main.py  requirements.txt
grpc-errors/: README.md  client.py  server.py
log_console/: README.md  command_helper.py  console.ini  nginx_vhost_console.conf  supervisor.conf  supervisor_console.ini  trimcells.awk  web_console.py
log_to_graphs/: README.md  SAMPLE.md  daily_log_plot.py  day_request.py  day_response.py  day_response_group.py  helper.ini  numpy_helper.py
loguru-sample/: README.md  log_config.py  pyproject.toml  test_loguru.py  use-config.py
loguru-sample/tests/: conftest.py  test_add_level.py  test_contextualize.py
pandas-sample/: README.md  numpy-pilot.ipynb  pandas-pilot.ipynb  pyproject.toml  (+3 more)
(+52 files in other folders)
