[tool.poetry]
name = "loguru-sample"
version = "0.1.0"
description = ""
authors = ["liyan <twotwo.li@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.5.1"
pytest = "^5.4.3"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

